--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,36 +1,28 @@
 ---
-title: "Testing testing 123!"
-publishDate: "13 May 2022"
-description: "Hello world!!! This is an example blog post showcasing some of the cool stuff Astro Cactus theme can do."
-tags: ["example", "blog", "cool"]
+title: "Hello world!"
+publishDate: "2023-2-1"
+description: "Hello world! Hello world! Hello world! Hello world!"
+tags: ["helloworld", "blog"]
 ---
 
 import { Image } from "@astrojs/image/components";
 
-## Hello World
+## Hello World 1
 
-Following is an example blog post written in an mdx file. You can find me @ src/content/post/hello-world.mdx. Here you can add/update/delete details and watch the changes live when running in develop mode.
+Hello world! Hello world! Hello world!
 
 <Image
-	src="https://picsum.photos/id/1025/550/460"
-	alt="A covered up pug in the woods"
+	src="https://via.placeholder.com/460x550/000000/FFFFFF/.png?text=Hello+World!"
+	alt="Hello world!"
 	width={550}
 	height={460}
 />
 
-## Using some markdown elements
+---
 
-Here we have a simple js code block.
+## Hello World 2
 
-```js
-let string = "JavaScript syntax highlighting";
-```
-
-This is styled by Shiki, set via the [config](https://docs.astro.build/en/guides/markdown-content/#syntax-highlighting) for Astro.
-
-You can choose your own theme from this [library](https://github.com/shikijs/shiki/blob/main/docs/themes.md#all-themes), which is currently set to Dracula, in the file `astro.config.mjs`.
-
-Here is a horizontal rule.
+Hello world! Hello world! Hello world!
 
 ---
 
@@ -53,7 +45,7 @@ Here is a table:
 | Juicy Apples | 1.99  |        739 |
 | Bananas      | 1.89  |          6 |
 
-## Tailwind CSS Prose styling
 
-> I'm a simple blockquote.
-> I'm styled by Tailwind CSS prose plugin
+```js
+console.log("Hello world!");
+```
