--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -5,18 +5,11 @@ description: "Hello world! Hello world! Hello world! Hello world!"
 tags: ["helloworld", "blog"]
 ---
 
-import { Image } from "@astrojs/image/components";
-
 ## Hello World 1
 
 Hello world! Hello world! Hello world!
 
-<Image
-	src="https://via.placeholder.com/460x550/000000/FFFFFF/.png?text=Hello+World!"
-	alt="Hello world!"
-	width={550}
-	height={460}
-/>
+![Hello world!](https://via.placeholder.com/500x460/000000/FFFFFF/?text=Hello+World!)
 
 ---
 
@@ -26,25 +19,26 @@ Hello world! Hello world! Hello world!
 
 ---
 
-Here is a list:
+无序列表:
 
 - Item number 1
 - Item number 2
 - Item number 3
 
-And an ordered list:
+有序列表:
 
-1. James Madison
-2. James Monroe
-3. John Quincy Adams
+1. Item number 1
+2. Item number 2
+3. Item number 3
 
-Here is a table:
+表格:
 
 | Item         | Price | # In stock |
 | ------------ | :---: | ---------: |
 | Juicy Apples | 1.99  |        739 |
 | Bananas      | 1.89  |          6 |
 
+代码块:
 
 ```js
 console.log("Hello world!");
