<fix>deps and add slug

--- a/src/content/post/test/hello-world.mdx
+++ b/src/content/post/test/hello-world.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hello world!"
+slug: "hello-world"
 publishDate: "2023-2-1"
 description: "Hello world! Hello world! Hello world! Hello world!"
 tags: ["helloworld", "blog"]
